[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://data/enemy/scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/buttons/textures/PNG/green_button00.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 190, 49 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Enemy" type="Area2D" groups=[
"enemies",
]]
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = -7.0
margin_right = 6.0
margin_bottom = -6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeProgressBar" type="ProgressBar" parent="UI"]
anchor_right = 1.0
margin_bottom = 1.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 5.0
value = 5.0
percent_visible = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="life_changed" from="." to="." method="_on_Enemy_life_changed"]
